# nextbudget-be

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  IMPLEMENTATION_STATUS.md  MULTICURRENCY_PLAN.md  README.md
features/: 01-database-schema.md  02-authentication.md  03-budget-management.md  04-category-management.md  05-transaction-management.md  06-account-management.md
migrations/: 20250101000000_create_users_table.sql  20260111000001_create_refresh_tokens.sql  20260111000002_create_budgets.sql  20260111000003_create_accounts.sql  20260111000004_create_categories.sql  20260111000005_create_transactions.sql  20260111000006_create_updated_at_triggers.sql  20260124000001_create_currencies_table.sql  20260124000002_create_exchange_rates_table.sql  20260124000003_add_currency_to_accounts.sql  20260124000004_add_currency_to_budgets.sql  20260124000005_add_default_currency_to_users.sql  20260126000001_add_destination_account_to_transactions.sql
scripts/: migrate.sh
src/: auth.rs  errors.rs  lib.rs  main.rs  models.rs  openapi.rs
src/account/: handlers.rs  models.rs  service.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  models.rs  password.rs  service.rs
src/budget/: handlers.rs  models.rs  service.rs
src/category/: handlers.rs  models.rs  service.rs
src/currency/: handlers.rs  models.rs  service.rs
src/extractors/: auth.rs  mod.rs
src/transaction/: handlers.rs  mod.rs  models.rs  service.rs
tests/: api_tests.rs
tests/common/: mod.rs
