[package]
name = "be-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "chrono",
    "macros"
] }
dotenv = "0.15.0"
env_logger = "0.11.6"
# Auth dependencies (pre-added for Phase 3)
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.11.0"
bytes = "1.11.0"
once_cell = "1.21.3"
